auto-test/tests/chapter_11/invalid_labels/extra_credit/bitshift_duplicate_cases.c



int main(void) {
    int x = 100;
    switch (x << 2l) {  
        
        
        case 34359738768l:  
            return 1;
        case 400:
            return 0;
    }
    return 10;
}